--- a/style.css
+++ b/style.css
@@ -710,6 +710,16 @@ section .points::before {
   font-weight: 500;
   line-height: 160%;
 }
+.faq-container .collapse{
+  color: #6E668A;
+
+/* Body/Defolt font */
+font-family: Inter;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 156%; /* 24.96px */
+}
 
 .question .fa-chevron-down {
   position: absolute;
@@ -772,6 +782,9 @@ footer span a:hover {
 .footer-container {
   align-items: left;
   padding: 3%;
+}
+.footer-container .logo{
+  width: 70%;
 }
 .footer-container .social-icons a {
   margin-left: 6px;
